# gemini-self-protector

./: CHANGELOG.md  LICENSE  README.md
agent_python/gemini_self_protector/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
agent_python/gemini_self_protector/docs/: Makefile  example.ipynb
agent_python/gemini_self_protector/src/gemini_self_protector/: __init__.py  _audit.py  _config.py  _gemini.py  _logger.py  _protect.py  _template.py  _utils.py  gemini_self_protector.py
gemini-python/gemini_self_protector/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
gemini-python/gemini_self_protector/docs/: Makefile  conf.py  example.ipynb
gemini-python/gemini_self_protector/src/gemini_self_protector/: __init__.py  _audit.py  _behavior.py  _cli.py  _config.py  _gemini.py  _gui.py  _logger.py  _model.py  _protect.py  _template.py  _traffic.py  _utils.py  gemini_self_protector.py
gemini-python/gemini_self_protector/src/gemini_self_protector/resource/assets/css/: dark.css  install.css  style.css
gemini-python/gemini_self_protector/src/gemini_self_protector/resource/assets/js/: install.js
gemini-python/gemini_self_protector/src/gemini_self_protector/resource/assets/js/pages/: chart-morris-custom.js
gemini-python/gemini_self_protector/src/gemini_self_protector/resource/templates/: install.html  key.html  license.html
gemini-python/gemini_self_protector/src/gemini_self_protector/resource/templates/accounts/: login.html
gemini-python/gemini_self_protector/src/gemini_self_protector/resource/templates/home/: acl.html  config.html  dependency.html  endpoint.html  feedback.html  index.html  monitor.html  page-403.html  page-404.html  page-500.html  page-blank.html  profile.html
gemini-python/gemini_self_protector/src/gemini_self_protector/resource/templates/includes/: navigation.html  scripts.html  sidebar.html
gemini-python/gemini_self_protector/src/gemini_self_protector/resource/templates/layouts/: base-fullscreen.html  base.html
gemini-python/gemini_self_protector/tests/: README.md  test_gemini_self_protector.py  test_gemini_self_protector_cli.py  test_gemini_self_protector_gui.py
(+19 files in other folders)
