[tool.poetry]
name = "gemini_self_protector"
version = "0.1.0"
description = "Runtime Application Self-Protection"
authors = ["lethanhphuc"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
