[tool.poetry]
name = "gemini_self_protector"
version = "0.1.0"
description = "Runtime Application Self-Protection"
authors = ["lethanhphuc"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
colorlog = "^6.7.0"
argon2-cffi = "^21.3.0"
flask-sqlalchemy = "^3.0.3"
pyyaml = "^6.0"
pyjwt = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
